--- a/src/app/shared/component/settings/settings.component.html
+++ b/src/app/shared/component/settings/settings.component.html
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
 <head>
 
 </head>
@@ -7,11 +7,23 @@
     
         <form>
        <div class="container"> 
-        <button type="button" class="btn m-3  btn-primary btn-lg">تعديل كلمة المرور</button>
-        
+        <button type="button" class="btn m-3 btn-primary btn-lg">تعديل كلمة المرور</button>
+
          <button type="button" class="btn  btn-secondary btn-lg">البيانات الشخصية</button>
       </div> 
 
     </form>
 </body>
-</html>          
+</html>    -->
+
+<body>
+    <h2>الاعدادات</h2>
+    <form class="form-signin"  >
+
+    <div class="form-group mb-2">
+        <button type="button" class="btn m-3 btn-primary btn-lg">تعديل كلمة المرور</button>
+        <button type="button" class="btn  btn-secondary btn-lg">تعديل البيانات الشخصية</button>
+   
+    </div>
+  </form>
+</body>
