--- a/src/app/shared/component/editpassword/editpassword.component.css
+++ b/src/app/shared/component/editpassword/editpassword.component.css
@@ -14,7 +14,6 @@ body {
   
   .form-signin {
     width: 100%;
-<<<<<<< HEAD
     max-width: 420px;
     padding: 15px;
     margin: auto;
@@ -182,15 +181,14 @@ body {
       background: #FE6F41;
       color: #FE6F41;
     }
-  
-=======
-    padding: 12px 20px;
+
+    /* padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
     border: 1px solid #ccc;
     box-sizing: border-box;
-    border-radius: 5px;
-}
+    border-radius: 5px; */ 
+
 input[type=radio]{
     width: 20%;
 }
@@ -208,4 +206,4 @@ button:hover {
     background: #353535;
     opacity: 0.8;
 }
->>>>>>> 0fcb2d50a31ec16c4fc660cee278680cb71a7e6d
+
