--- a/src/app/admin/component/about-form/about-form.component.html
+++ b/src/app/admin/component/about-form/about-form.component.html
@@ -1,4 +1,4 @@
-<title>Report form</title>
+<title>teams form</title>
 
     
 <form class="form-signin" [formGroup]="form" (ngSubmit)="submitForm()" novalidate >
@@ -6,32 +6,31 @@
     <div class="form-label-group">
         <input type="text" id="name" formControlName="name" class="form-control"
          placeholder="Name" required autofocus >
-        <label for="inputName">اسم المؤسس</label>        
-        <div class="alert alert-danger" role="alert"
-          *ngIf="form.controls['name'].errors && form.controls['name'].touched" >
-          <strong *ngIf="form.controls['name'].errors['required']">الاسم مطلوب</strong>
-          <strong *ngIf="form.controls['name'].errors['minlength']" >  الاسم  يجب الا يقل عن حرفان</strong>
-          <strong *ngIf="form.controls['name'].errors['maxlength']">  الاسم  يجب الا يزيد عن عشرة احرف</strong>
-          <strong *ngIf="form.controls['name'].errors['pattern']" >   الاسم  يجب ان يكون حروف عربية</strong>
+        <label for="inputName">الاسم</label>        
+        <div class="alert alert-danger" role="alert" *ngIf="form.controls['name'].errors && form.controls['name'].touched" >
+          <strong *ngIf="form.controls['name'].errors['required']">برجاء ادخال الاسم</strong>
+          <strong *ngIf="form.controls['name'].errors['minlength']" >  الاسم  يجب الا يقل عن خمسه احرف</strong>
+          <strong *ngIf="form.controls['name'].errors['maxlength']">  الحد الاقصى للحروف هو عشرون حرف</strong>
+          <strong *ngIf="form.controls['name'].errors['pattern']" >   الاسم  يجب ان يكون حروف فقط</strong>
         </div>       
       </div>    
 
   <div class="form-label-group">
        <input type="text" id="jobTitle" formControlName="jobTitle" class="form-control"  required autofocus >
-       <label for="inputEmail">وظيفته </label>
+       <label for="inputEmail">الوظيفة </label>
        <div class="alert alert-danger" role="alert"
           *ngIf="form.controls['jobTitle'].errors && form.controls['jobTitle'].touched" >
-          <strong *ngIf="form.controls['jobTitle'].errors['required']">الوظيفة مطلوبة</strong>
-          <strong *ngIf="form.controls['jobTitle'].errors['minlength']" >  الوظيفة  يجب الا تقل عن حرفان</strong>
-          <strong *ngIf="form.controls['jobTitle'].errors['maxlength']">  الوظيفة  يجب الا تزيد عن عشرة احرف</strong>
-          <strong *ngIf="form.controls['jobTitle'].errors['pattern']" >  الوظيفة  يجب ان تكون حروف</strong>
+          <strong *ngIf="form.controls['jobTitle'].errors['required']">برجاء ادخال الوظيفه </strong>
+          <strong *ngIf="form.controls['jobTitle'].errors['minlength']" >  الوظيفة  يجب الا تقل عن عشره احرف</strong>
+          <strong *ngIf="form.controls['jobTitle'].errors['maxlength']">  اقصى عدد للحروف اربعون حرف</strong>
+          <strong *ngIf="form.controls['jobTitle'].errors['pattern']" > الوظيفة يجب ان تكون حروف فقط</strong>
         </div>
   </div>
   <br> <br>
 
   <div class="custom-file">
     <label class="custom-file-label" for="customFile">صورته الشخصية</label>
-    <input type="file" name="image" class="custom-file-input" id="customFile" (change)="uploadFile1($event)">
+    <input type="file" name="image" class="custom-file-input mx-3" id="customFile" (change)="uploadFile1($event)">
   </div>
   <br> <br>
 
