--- a/src/app/admin/component/reports-details/reports-details.component.html
+++ b/src/app/admin/component/reports-details/reports-details.component.html
@@ -1,49 +1,39 @@
-	<link rel="stylesheet" href=
-"https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	
-	<script src=
-"https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
-	</script>
-	
-	<script src=
-"https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js">
-	</script>
-	
-	<script src=
-"https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js">
-	</script>
-	
-	<h1 style="color:green;text-align:center;">
-		Report
-	</h1>
-
 	<div class="container">
-		<div class="card-group">
-
 			<!--bootstrap card with 3 horizontal images-->
-			<div class="row" *ngFor="let item of reportData.report">
-				<div class="card col-md-4">
-					<img class="card-img-top card col-md-4 card-body" 
-					src="{{item.contact_us_file[0].file_name}}">
-				</div>
-
-				<div class="card col-md-4">
+			<div class="row">
+				<div class="card col-md-4 col-lg-6">
 					<!-- <img class="card-img-top" src=
 "https://media.geeksforgeeks.org/wp-content/cdn-uploads/20190705124953/Left-SP2019.png"> -->
-					<div class="card-body">
-						<h3  style="color:green;text-align:center;">بيانات الشكوى</h3>
-						<h4>صاحب الشكوى  : <span class="card-title text-primary">{{item.name}}</span></h4>
-						<h4> ايميل  : <span class="card-title text-primary">{{item.email}}</span></h4>
-						<h4> رقم الموبايل  : <span class="card-title text-primary">{{item.phone}}</span></h4>
-						<h4> العنوان  : <span class="card-title text-primary"><a href="{{item.url}}">{{item.url}}</a></span></h4>
-						<h4>محتوى الشكوى : <p class="card-text">{{item.description}}</p></h4>
+					<div class="card-body" style="text-align: initial;" *ngFor="let item of reportData.report">
+						<h2  style="color:green;text-align:center;text-decoration: underline;">بيانات الشكوى</h2>
+						<h3>الاسم : <span class="card-title text-primary">{{item.name}}</span></h3>
+						<h3> البريد الالكتروني  : <span class="card-title text-primary">{{item.email}}</span></h3>
+						<h3> رقم الهاتف  : <span class="card-title text-primary">{{item.phone}}</span></h3>
+						<h3 *ngIf="url"> الرابط  : <span class="card-title text-primary"><a href="{{item.url}}">{{item.url}}</a></span></h3>
+						<h3>الوصف : <span class="card-text">{{item.description}}</span></h3>
 					</div>
+
+					
+						
 				</div>
-				
-				<div class="card col-md-4">
-					<img class="card-img-top card col-md-4 card-body" 
-					src="{{item.contact_us_file[1].file_name}}">
-				</div>
-			</div>
+				<div id="carouselExampleControls" class="carousel slide col-6" data-ride="carousel">
+					<div class="carousel-inner">
+					  <div class="carousel-item active" *ngFor="let image of images let i = index" [ngClass]="{'active': i == 0 }">
+					    <a [href]="image.file_name" target="_blank">
+							<img class="d-block w-100" [src]="image.file_name" alt="" style="height: 468px;" >
+						</a>
+						</div>
+					
+					</div>
+					<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+					  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					</a>
+					<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+					  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+					</a>
+				  </div>
+			
 		</div>
 	</div>
+	
