--- a/src/app/components/report-form-user/report-form-user.component.html
+++ b/src/app/components/report-form-user/report-form-user.component.html
@@ -2,82 +2,68 @@
 
   <body>
     
-<form class="form-signin" [formGroup]="form" (ngSubmit)="submitForm()">
+<form class="form-signin mt-5" [formGroup]="form" (ngSubmit)="submitForm()" novalidate>
     <div class="form-label-group">
-        <input type="text" id="inputName" formControlName="name" class="form-control" placeholder="Name" required autofocus >
-        <label for="inputName">اسم المستأجر</label>
+        <input type="text" id="name" formControlName="name" class="form-control" placeholder="Name" required autofocus >
+        <label for="inputName">الاسم</label>
         <div class="alert alert-danger" role="alert"
           *ngIf="form.controls['name'].errors && form.controls['name'].touched" >
-          <strong *ngIf="form.controls['name'].errors['required']">الاسم مطلوب</strong>
-          <strong *ngIf="form.controls['name'].errors['minlength']" >  الاسم  يجب الا يقل عن حرفان</strong>
-          <strong *ngIf="form.controls['name'].errors['maxlength']">  الاسم  يجب الا يزيد عن عشرة احرف</strong>
-          <strong *ngIf="form.controls['name'].errors['pattern']" >   الاسم  يجب ان يكون حروف عربية</strong>
+          <strong *ngIf="form.controls['name'].errors['required']">برجاء ادخال الاسم</strong>
+          <strong *ngIf="form.controls['name'].errors['minlength']" >  الاسم  يجب الا يقل عن اربعه احرف</strong>
+          <strong *ngIf="form.controls['name'].errors['maxlength']">  الاسم  يجب الا يزيد عن عشرون حرفا</strong>
+          <strong *ngIf="form.controls['name'].errors['pattern']" >   الاسم  يجب ان يكون حروف فقط</strong>
         </div>       
-      </div>    <small id="name"></small>
+      </div>  
 
   <div class="form-label-group">
-    <input type="email" id="inputEmail" formControlName="email" class="form-control" placeholder="Email address" required autofocus >
+    <input type="email" id="email" formControlName="email" class="form-control" placeholder="البريد الالكتروني" required autofocus >
     <label for="inputEmail">البريد الالكترونى</label>
     <div class="alert alert-danger" role="alert"
     *ngIf=" form.controls['email'].errors && form.controls['email'].touched">
-    <strong *ngIf="form.controls['email'].errors &&  form.controls['email'].errors['required']">
-    برجاء ادخال البريد الالكترونى</strong >
-    <strong *ngIf="form.controls['email'].errors['email']">ادخل ايميل صحيح</strong>
+    <strong *ngIf="form.controls['email'].errors &&  form.controls['email'].errors['required']"> برجاء ادخال البريد الالكترونى</strong >
+    <strong *ngIf="form.controls['email'].errors['email']">برجاء ادخال البريد الالكتروني بطريقه صحيحه</strong>
   </div>
-  </div> <small id="email"></small>
+  </div> 
 
   <div class="form-label-group">
-    <input type="text" id="inputPhone" formControlName="phone" class="form-control" placeholder="phone" required >
-    <label for="inputPhone">رقم الموبايل</label>
-    <div class="alert alert-danger" role="alert"
-    *ngIf="form.controls['phone'].errors " >
-    <strong 
-    *ngIf="form.controls['phone'].errors && form.controls['phone'].errors['required']">
-    برجاء ادخال رقم الهاتف</strong>
-    <strong *ngIf="form.controls['phone'].errors['minlength']">
-      رقم الهاتف يجب الا يقل عن 11 رقما</strong >
-      <strong *ngIf="form.controls['phone'].errors['maxlength']" >
-        رقم الهاتف يجب الا يزيد عن 11 رقما</strong>
-      <strong *ngIf="form.controls['phone'].errors['pattern']" >
-        ادخل رقما صحيحا</strong >
+    <input type="text" id="phone" formControlName="phone" class="form-control" placeholder="phone" required >
+    <label for="inputPhone">رقم الهاتف</label>
+    <div class="alert alert-danger" role="alert" *ngIf="form.controls['phone'].errors && form.controls['phone'].touched" >
+    <strong  *ngIf="form.controls['phone'].errors['required']"> برجاء ادخال رقم الهاتف</strong>
+    <strong *ngIf="form.controls['phone'].errors['minlength']">رقم الهاتف يجب الا يقل عن 11 رقما</strong >
+      <strong *ngIf="form.controls['phone'].errors['maxlength']" >رقم الهاتف يجب الا يزيد عن 11 رقما</strong>
+      <strong *ngIf="form.controls['phone'].errors['pattern']" >لابد ان يبدا هاتفك ب 015,012,011,010</strong >
     </div>
-  </div> <small id="phone"></small>
+  </div> 
 
   <div class="form-label-group">
-    <input type="text" id="inputPhone" formControlName="url" class="form-control" placeholder="phone" required >
-    <label for="inputPhone"> عنوان ال url</label>
-    <div class="alert alert-danger" role="alert"
-    *ngIf=" form.controls['url'].errors && form.controls['url'].touched">
-    <strong *ngIf="form.controls['url'].errors &&  form.controls['url'].errors['required']">
-    برجاء ادخال البريد الالكترونى</strong >
-    </div >
-  </div> <small id="url"></small>
+    <input type="text" id="url" formControlName="url" class="form-control" placeholder="الرابط" required >
+    <label for="inputPhone"> الرابط</label>
+  </div>
 
   <div class="form-label-group">
-    <input type="txtarea" id="inputDescription" formControlName="description" class="form-control" placeholder="Description" required autofocus >
-    <label for="inputDescription">وصف الشكوى</label>
-    <div class="alert alert-danger" role="alert"
-    *ngIf=" form.controls['description'].errors && form.controls['description'].touched">
-    <strong *ngIf="form.controls['description'].errors &&  form.controls['description'].errors['required']">
-    برجاء ادخال الحقل </strong >
+    <textarea id="description" formControlName="description" placeholder="وصف الشكوى" class="form-control"  required autofocus ></textarea>
+    <!-- <label for="inputDescription">وصف الشكوى</label> -->
+    <div class="alert alert-danger" role="alert"*ngIf=" form.controls['description'].errors && form.controls['description'].touched">
+    <strong *ngIf="form.controls['description'].errors['required']">برجاء ادخال الحقل </strong >
     </div >
-  </div>  <small id="description"></small>
-
-  <div class="custom-file">
-    <label class="custom-file-label" for="customFile">المرفق 1</label>
-    <input type="file" formControlName="image[0]" class="custom-file-input" id="customFile" (change)="uploadFile1($event)">
-  </div>
-  <div class="custom-file">
-    <label class="custom-file-label" for="customFile">المرفق 2</label>
-    <input type="file" formControlName="image[1]" class="custom-file-input" id="customFile" (change)="uploadFile2($event)" >
-  </div>
-  
-  <div class="custom-file">
-   <br>
-  </div>
-  
+  </div>  
+  <div class="form-group">
+    <input id="file"
+        type="file"
+        class="form-control mb-3"
+        formControlName ='file'
+        multiple="multiple"
+        (change)="onFileChange($event)">
+        <div
+        class="alert alert-danger"
+          role="alert"
+          *ngIf="
+          form.controls['file'].errors">
+        </div>
+</div>
   <div>
-  <button class="send" >تقديم الشكوى</button>
+  <button class="send mx-auto" >تقديم الشكوى</button>
 </div>
 </form>
 
