--- a/src/app/admin/component/about-policty-update/about-policty-update.component.html
+++ b/src/app/admin/component/about-policty-update/about-policty-update.component.html
@@ -7,25 +7,24 @@
         <input type="text" id="name" formControlName="name" class="form-control"
          placeholder="Name" required autofocus >
         <label for="inputName">اسم المؤسس</label>        
-        <div class="alert alert-danger" role="alert"
+        <!-- <div class="alert alert-danger" role="alert"
           *ngIf="form.controls['name'].errors && form.controls['name'].touched" >
           <strong *ngIf="form.controls['name'].errors['required']">الاسم مطلوب</strong>
           <strong *ngIf="form.controls['name'].errors['minlength']" >  الاسم  يجب الا يقل عن حرفان</strong>
           <strong *ngIf="form.controls['name'].errors['maxlength']">  الاسم  يجب الا يزيد عن عشرة احرف</strong>
           <strong *ngIf="form.controls['name'].errors['pattern']" >   الاسم  يجب ان يكون حروف </strong>
-        </div>       
+        </div>        -->
       </div>    
 
   <div class="form-label-group">
        <input type="text" id="jobTitle" formControlName="jobTitle" class="form-control"  required autofocus >
        <label for="inputEmail">وظيفته </label>
-       <div class="alert alert-danger" role="alert"
+       <!-- <div class="alert alert-danger" role="alert"
           *ngIf="form.controls['jobTitle'].errors && form.controls['jobTitle'].touched" >
           <strong *ngIf="form.controls['jobTitle'].errors['required']">الوظيفة مطلوبة</strong>
-          <!-- <strong *ngIf="form.controls['jobTitle'].errors['minlength']" >  الوظيفة  يجب الا تقل عن حرفان</strong> -->
           <strong *ngIf="form.controls['jobTitle'].errors['maxlength']">  الوظيفة  يجب الا تزيد عن عشرة احرف</strong>
           <strong *ngIf="form.controls['jobTitle'].errors['pattern']" >  الوظيفة  يجب ان تكون حروف</strong>
-        </div>
+        </div> -->
   </div>
   <br> <br>
 
