--- a/src/app/admin/component/reports/reports.component.html
+++ b/src/app/admin/component/reports/reports.component.html
@@ -20,8 +20,8 @@
           <td>{{item.email}}</td>
           <td>{{item.phone}}</td>
           <td>{{item.url}}</td>
-          <td><button class="btn btn-primary" (click)="showReport(item.id)">Show</button></td>
-          <td><button class="btn btn-danger"  (click)="deleteReport(item.id)">Delete</button></td>
+          <td><button class="send" style="width: 79px;height: 42px; padding: 0px;" (click)="showReport(item.id)">Show</button></td>
+          <td><button class="send" style="width: 79px;height: 42px; padding: 0px;"  (click)="deleteReport(item.id)">Delete</button></td>
         </tr>
       </tbody>
     </table>
