--- a/src/app/components/favourits/favourits.component.html
+++ b/src/app/components/favourits/favourits.component.html
@@ -1,9 +1,12 @@
-<p>weeeeeeeeeeeeeeeeee</p>
-<div  *ngFor="let adver of adv">
-  now
-  <div class="card shadow-sm m-3" routerLink="">
+<!-- <div  > -->
+  <div class="album py-5 ">
+    <div class="container">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-3 g-3">
 
-      
+        <div class="col "
+          *ngFor="let adver of adv | paginate: { itemsPerPage: 9,totalItems:totalNumber, currentPage: page }">
+
+  <div class="card shadow-sm m-3" routerLink="/details/{{adver.advertisement_id}}" >      
     <img [src]="adver.advertisement.advertisement_image[0].image_name" height="200px" width="100%" alt="" >
   <div class="card-body bg-light ">
     <div class="container">
@@ -15,18 +18,15 @@
             <p class="mb-2 text-muted">{{adver.advertisement.type}}</p>
             <div class="d-flex flex-row" >
               <mat-icon style="font-size:large;">star</mat-icon>
-              <p></p>
-              <p></p>
+              <p>{{adver.advertisement.bedroom_num}} عدد الغرف</p><br>
+              <p>{{adver.advertisement.bathroom_num}} عدد  التواليت</p>
             </div>
 
           </div>
-          <h3 class="mb-0"></h3>
-          <h3 class="mb-0"></h3>
+          <h3 class="mb-0">{{adver.advertisement.title}}</h3>
+          <h3 class="mb-0">{{adver.advertisement.price}}</h3>
           <div class="d-flex justify-content-between align-items-center ">
-            <small class="text-muted"> <span class="material-icons   ">location_on</span> </small>
-          </div>
-          <div class=" mt-2">
-            <button type="button" class="btn mx-1 btn-sm btn-outline-warning">تعديل</button>
+            <small class="text-muted"> <span class="material-icons   ">location_on</span> {{adver.advertisement.address}}</small>
           </div>
         </div>
       </div>
@@ -34,6 +34,9 @@
 
 
   </div>
+  </div>
+  </div>
+  </div></div>
 </div>
 
-</div>
+<!-- </div> -->
