--- a/src/app/users/component/owner/owner.component.html
+++ b/src/app/users/component/owner/owner.component.html
@@ -1,6 +1,9 @@
 <!-- <img src=""> -->
 <div class="container  gradient-form">
-  
+  <div class="alert alert-success alert-dismissible fade show" role="alert" *ngIf="message">
+    تمت اضافة اعلان بنجاح
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
   <div class="row  w-100 g-0">
     <div class="col-sm-12 w-100 ">
       <div class="row">
