--- a/src/app/shared/component/cart-details/cart-details.component.css
+++ b/src/app/shared/component/cart-details/cart-details.component.css
@@ -7,7 +7,7 @@
 /* Carousel base class */
 .carousel {
     margin-bottom: 4rem;
-    width: 90vw;
+    width: 90%;
   }
   /* Since positioning the image, we need to help out the caption */
   
