--- a/src/app/shared/component/side-bar/side-bar.component.html
+++ b/src/app/shared/component/side-bar/side-bar.component.html
@@ -3,7 +3,7 @@
       <img
         class="avatar mat-elevation-z8"
        [src] ="image"/>
-      <!-- <mat-icon>camera_alt</mat-icon> -->
+       <mat-icon>camera_alt</mat-icon> 
       <h2 class="name">{{name}}</h2>
       
   
