--- a/src/app/admin/component/rejectedd-ads/rejectedd-ads.component.html
+++ b/src/app/admin/component/rejectedd-ads/rejectedd-ads.component.html
@@ -58,6 +58,6 @@
 </div>
 <ng-template #noData>
   <div class="noData">
-  <p>لايوجد اعلانات مؤجرة </p>
+  <p>لايوجد اعلانات مرفوضه </p>
 </div>
 </ng-template>
