--- a/src/app/users/component/renter/renter.component.html
+++ b/src/app/users/component/renter/renter.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="!loading" class="pt-5 ">
-  <div class="container  mt-3 p-5 search d-flex justify-content-center align-items-center ">
+  <div class="container   search d-flex justify-content-center align-items-center ">
     <div class="row  w-75 justify-content-center m-auto   align-items-center">
       <div class="col d-flex justify-content-center align-items-center  bg-white ">
         <mat-form-field appearance="fill" class="mt-3 ">
