--- a/src/app/auth/component/reset-password/reset-password.component.html
+++ b/src/app/auth/component/reset-password/reset-password.component.html
@@ -1,72 +1,152 @@
-<section class=" mt-5 gradient-form">
-  <div class="container mt-5 py-5 ">
-
+<section class="mt-5 gradient-form">
+  <div class="container mt-5 py-5">
     <div class="row mt-5 h-100">
       <div class="col-xl-10">
         <section class="card rounded-3 text-black">
           <div class="row justify-content-center g-0">
             <div class="col-lg-6">
               <div class="card-body p-md-5 mx-md-4">
-
                 <div class="text-center">
-                  <h4 class="mt-3 mb-5 pb-1 text-danger header"> </h4>
+                  <h4 class="mt-3 mb-5 pb-1 text-danger header"></h4>
                 </div>
 
                 <form [formGroup]="loginForm">
-
-
-
-                    <div>
                   <div class="form-outline mb-4">
-                    <label class="form-label d-flex" for="password">كلمة المرور</label>
-                    <input type="password" class="form-control" #confirm formControlName="password" placeholder="كلمة المرور"
-                      required name="password" />
-                    <div *ngIf="loginForm.controls['password'].errors && (loginForm.controls['password'].touched)">
-                      <small class="form-text text-danger "
-                        *ngIf="loginForm.controls['password'].errors && loginForm.controls['password'].errors ['required']">برجاء
-                        ادخال كلمة المرور</small>
-                      <small class="form-text text-danger " *ngIf="loginForm.controls['password'].errors['minlength'] ">
-                        كلمة المرور لا تقل عن 8 حروف و ارقام </small>
-                      <small class="form-text text-danger " *ngIf="loginForm.controls['password'].errors['pattern']">
-                        يجب أن تتكون كلمة المرور الخاصة بك من أكثر من 8 أحرف ، ويجب أن تحتوي على الأقل على حرف كبير واحد
-                        ، وحرف صغير واحد ، ورقم واحد ، ورمزا واحد </small>
-                      <small class="form-text text-danger " *ngIf="loginForm.controls['password'].errors['maxlength']">
-                        كلمة المرور لا تقل عن 8 حروف و ارقام</small>
+                    <label class="form-label d-flex" for="password"
+                      >كلمة المرور</label
+                    >
+                    <input
+                      type="password"
+                      class="form-control"
+                      #confirm
+                      formControlName="password"
+                      placeholder="كلمة المرور"
+                      required
+                      name="password"
+                    />
+                    <div
+                      *ngIf="
+                        loginForm.controls['password'].errors &&
+                        loginForm.controls['password'].touched
+                      "
+                    >
+                      <small
+                        class="form-text text-danger"
+                        *ngIf="
+                          loginForm.controls['password'].errors &&
+                          loginForm.controls['password'].errors['required']
+                        "
+                        >برجاء ادخال كلمة المرور</small
+                      >
+                      <small
+                        class="form-text text-danger"
+                        *ngIf="
+                          loginForm.controls['password'].errors['minlength']
+                        "
+                      >
+                        كلمة المرور لا تقل عن 8 حروف و ارقام
+                      </small>
+                      <small
+                        class="form-text text-danger"
+                        *ngIf="loginForm.controls['password'].errors['pattern']"
+                      >
+                        يجب أن تتكون كلمة المرور الخاصة بك من أكثر من 8 أحرف ،
+                        ويجب أن تحتوي على الأقل على حرف كبير واحد ، وحرف صغير
+                        واحد ، ورقم واحد ، ورمزا واحد
+                      </small>
+                      <small
+                        class="form-text text-danger"
+                        *ngIf="
+                          loginForm.controls['password'].errors['maxlength']
+                        "
+                      >
+                        كلمة المرور لا تقل عن 8 حروف و ارقام</small
+                      >
                     </div>
-                  </div>
-                  <div class="form-outline mb-4">
-                    <label class="form-label d-flex" for="password">تاكيد كلمة المرور</label>
-                    <input type="password" class="form-control" #pass formControlName="password_confirmation" placeholder="كلمة المرور"
-                      required name="password" />
-                    <div *ngIf="loginForm.controls['password_confirmation'].errors && (loginForm.controls['password_confirmation'].touched)">
-                      <small class="form-text text-danger "
-                        *ngIf="loginForm.controls['password_confirmation'].errors && loginForm.controls['password_confirmation'].errors ['required']">برجاء
-                        ادخال كلمة المرور</small>
-                      <small class="form-text text-danger " *ngIf="loginForm.controls['password_confirmation'].errors['minlength'] ">
-                        كلمة المرور لا تقل عن 8 حروف و ارقام </small>
-                      <small class="form-text text-danger " *ngIf="loginForm.controls['password_confirmation'].errors['pattern']">
-                        يجب أن تتكون كلمة المرور الخاصة بك من أكثر من 8 أحرف ، ويجب أن تحتوي على الأقل على حرف كبير واحد
-                        ، وحرف صغير واحد ، ورقم واحد ، ورمزا واحد </small>
-                      <small class="form-text text-danger " *ngIf="loginForm.controls['password_confirmation'].errors['maxlength']">
-                        كلمة المرور لا تقل عن 8 حروف و ارقام</small>
+                    <div class="text-danger">{{passwoderror}}</div>
+                    <div class="form-outline mb-4">
+                      <label class="form-label d-flex" for="password"
+                        >تاكيد كلمة المرور</label
+                      >
+                      <input
+                        type="password"
+                        class="form-control"
+                        #pass
+                        formControlName="password_confirmation"
+                        placeholder="تاكيد كلمةالمرور"
+                        required
+                        name="password"
+                      />
+                      <div
+                        *ngIf="
+                          loginForm.controls['password_confirmation'].errors &&
+                          loginForm.controls['password_confirmation'].touched
+                        "
+                      >
+                        <small
+                          class="form-text text-danger"
+                          *ngIf="
+                            loginForm.controls['password_confirmation']
+                              .errors &&
+                            loginForm.controls['password_confirmation'].errors[
+                              'required'
+                            ]
+                          "
+                          >برجاء ادخال كلمة المرور</small
+                        >
+                        <small
+                          class="form-text text-danger"
+                          *ngIf="
+                            loginForm.controls['password_confirmation'].errors[
+                              'minlength'
+                            ]
+                          "
+                        >
+                          كلمة المرور لا تقل عن 8 حروف و ارقام
+                        </small>
+                        <small
+                          class="form-text text-danger"
+                          *ngIf="
+                            loginForm.controls['password_confirmation'].errors[
+                              'pattern'
+                            ]
+                          "
+                        >
+                          يجب أن تتكون كلمة المرور الخاصة بك من أكثر من 8 أحرف ،
+                          ويجب أن تحتوي على الأقل على حرف كبير واحد ، وحرف صغير
+                          واحد ، ورقم واحد ، ورمزا واحد
+                        </small>
+                        <small
+                          class="form-text text-danger"
+                          *ngIf="
+                            loginForm.controls['password_confirmation'].errors[
+                              'maxlength'
+                            ]
+                          "
+                        >
+                          كلمة المرور لا تقل عن 8 حروف و ارقام</small
+                        >
+                      </div>
+                      <div>
+                        <small
+                          class="form-text text-danger"
+                          *ngIf="passwordNotMatch == true"
+                        >
+                          تاكيد كلمة المرور غير مشابة لكلمة المرور</small
+                        >
+                      </div>
                     </div>
-                    <div>
-                      <small class="form-text text-danger " *ngIf="passwordNotMatch == true">
-                        تاكيد كلمة المرور غير مشابة لكلمة المرور</small>
-                    </div>
-                  </div>
-                    <!-- <p id="passwoderror"></p> -->
-                    <!-- <p id="passwoderror">{{passwoderror}}</p> -->
                   </div>
                   <div class="pt-1 mb-4">
-                    <button class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3" type="submit"
-                    (click)="submit()">ارسال </button>
+                    <button
+                      class="btn send fa-lg form-control"
+                      type="submit"
+                      (click)="submit()"
+                    >
+                      ارسال
+                    </button>
                   </div>
-                  {{loginForm.status|json}}
-                  {{passwordNotMatch}}
-
                 </form>
-
               </div>
             </div>
           </div>
