--- a/src/app/auth/component/mail-confirm/mail-confirm.component.html
+++ b/src/app/auth/component/mail-confirm/mail-confirm.component.html
@@ -20,7 +20,7 @@
                     <label for="inputPhone" class="mb-2">رمز التفعيل </label>
 
                     <input type="text" dir="ltr" class="form-control" formControlName="token" name="token" />
-                    <div id="code" class="text-danger"></div>
+                    <div id="code" class="text-danger">{{err}}</div>
 
 
                   </div>
@@ -38,7 +38,7 @@
                     <strong *ngIf="confirmCode.controls['token'].errors['pattern']">الرقم غير صحيح</strong>
                   </div>
                   <div class="text-center mt-5">
-                    <input class="send" type="submit" value="submit" [disabled]="confirmCode?.invalid"
+                    <input class="send" type="submit" value="submit" 
                       (click)="onsubmit()" />
                   </div>
                 </form>
