--- a/src/app/components/add-properity/add-properity.component.html
+++ b/src/app/components/add-properity/add-properity.component.html
@@ -1,5 +1,6 @@
+<!-- <ngx-spinner type="ball-scale-multiple"></ngx-spinner> -->
 
-
+<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-scale-multiple" [fullScreen] = "true"><p style="color: white" >   جار إضافة الاعلان ... </p></ngx-spinner>
 <div class="apply-page-header container">
   <section class="apply-page-header-title">
     <div class="apply-page-header-title-container container">
@@ -393,8 +394,12 @@
 
 
 
+
     <div class="text-center mt-5">
+
       <input class="send" type="submit" value="submit" (click)="onsubmit()"/>
     </div>
+
+
   </form>
 </div>
