--- a/src/app/shared/component/cart-details/cart-details.component.html
+++ b/src/app/shared/component/cart-details/cart-details.component.html
@@ -45,7 +45,7 @@
       <h2>تفاصيل العقار :</h2>
       <div class="mx-3">
           <h3>عدد السرائر :{{data.beds_num}}</h3>
-          <h3>مفروش  :{{data.furniture}}</h3>
+          <h3>مفروش  :{{data.furniture  | yesOrNo}}</h3>
           <h3>الطابق : {{data.level}}</h3>
           <p>الوصف : {{data.description}}</p>
   
