--- a/src/app/admin/component/admins/admins.component.html
+++ b/src/app/admin/component/admins/admins.component.html
@@ -25,11 +25,11 @@
             <td mat-cell *matCellDef="let element"> {{element.email}} </td>
           </ng-container>
       
-          <!-- Symbol Column -->
+          <!-- Symbol Column
           <ng-container matColumnDef="status">
             <th mat-header-cell *matHeaderCellDef  > النشاط</th>
             <td mat-cell *matCellDef="let element"> {{element.status}} </td>
-          </ng-container>
+          </ng-container> -->
 
           <!-- Symbol Column -->
           <ng-container matColumnDef="phone">
@@ -40,7 +40,7 @@
           <!-- Symbol Column -->
           <ng-container matColumnDef="gender">
             <th mat-header-cell *matHeaderCellDef  > النوع</th>
-            <td mat-cell *matCellDef="let element"> {{element.gender}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.gender | gender}} </td>
           </ng-container>
 
          
