--- a/src/app/admin/component/team-member-update/team-member-update.component.css
+++ b/src/app/admin/component/team-member-update/team-member-update.component.css
@@ -12,6 +12,10 @@ body {
   padding-bottom: 40px;
   background-color: #f5f5f5;
 }
+hr{
+  width: 50%;
+  margin: auto;
+}
 
 .form-signin {
   width: 100%;
