--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,11 +16,11 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link "*ngIf="!isLogin" aria-current="page" routerLink="/about">التعريف</a>
+              <a class="nav-link " aria-current="page" routerLink="/about">التعريف</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link "*ngIf="!isLogin" aria-current="page" routerLink="/about">تواصل معنا</a>
+              <a class="nav-link " aria-current="page" routerLink="/reportForm">تواصل معنا</a>
             </li>
             
             <li class="nav-item" *ngIf="isLogin">
