--- a/src/app/shared/component/editpassword/editpassword.component.html
+++ b/src/app/shared/component/editpassword/editpassword.component.html
@@ -1,28 +1,125 @@
 
- <html>
-    <head>
-    
-    </head>
-    <body>
-        <h2>تعديل كلمة المرور</h2>
-    
-    <form dir="rtl">
-        <div class="mb-3">
-          <label for="exampleInputpassword" class="form-label"> كلمة المرور القديمة</label>
-          <input type="password" class="form-control" id="exampleInputpassword" aria-describedby="passwordHelp">
-          
-        </div>
-        <div class="mb-3">
-          <label for="exampleInputImage" class="form-label">كلمة المرور الجديدة</label>
-          <input type="password" class="form-control" id="exampleInputpassword">
-        </div>
+<div class="" style="margin-top:90px !important;">
 
-        <div class="mb-3">
-            <label for="exampleInputImage" class="form-label">تأكيد كلمة المرور</label>
-            <input type="password" class="form-control" id="exampleInputconfirmpassword">
-          </div>
-        
-      </form>
-    </body>
-    </html> 
-    
+  <form
+class="form-signin"
+[formGroup]="passwdreset"
+(ngSubmit)="submitForm()"
+novalidate
+>
+<title>Edit form</title>
+  <div class="form-label-group">
+    <input
+      type="password"
+      id="old_password"
+      formControlName="old_password"
+      class="form-control"
+      placeholder=""
+      required
+      autofocus
+    />
+    <label for="inputold_password">كلمة المرور القديمة</label>
+    <div
+      class="alert alert-danger"
+      role="alert"
+      *ngIf="
+      passwdreset.controls['old_password'].errors &&
+      passwdreset.controls['old_password'].touched
+      "
+    >
+      <strong *ngIf="form.controls['old_password'].errors['required']">
+        كلمة المرور مطلوبة</strong
+      >
+      <strong *ngIf="form.controls['old_password'].errors['minlength']">
+        كلمة المرور يجب ان تحتوى على ارقام وحروف
+      </strong>
+      <strong *ngIf="form.controls['old_password'].errors['maxlength']">
+        كلمة المرور يجب ان تحتوى على ارقام وحروف
+      </strong>
+      <strong *ngIf="form.controls['old_password'].errors['pattern']">
+        كلمة المرور يجب ان تحتوى على حرف كابيتال على الاقل وحرف صغير
+      </strong>
+    </div>
+  </div>
+
+  <br />
+  <br />
+  <div class="form-label-group">
+    <input
+      type="password"
+      id="new_password"
+      formControlName="new_password"
+      class="form-control"
+      required
+      autofocus
+    />
+    <label for="inputnew_password"> كلمة المرور الجديدة</label>
+    <div
+      class="alert alert-danger"
+      role="alert"
+      *ngIf="
+      passwdreset.controls['new_password'].errors &&
+      passwdreset.controls['new_password'].touched
+      "
+    >
+      <strong *ngIf="passwdreset.controls['new_password'].errors['required']">
+        كلمة المرور مطلوبة
+      </strong>
+      <strong *ngIf="passwdreset.controls['new_password'].errors['minlength']">
+        كلمة المرور يجب ان لا تقل عن 6</strong
+      >
+      <strong *ngIf="passwdreset.controls['new_password'].errors['maxlength']">
+        كلمة مرور يجب ان لا تزيد عن 20</strong
+      >
+      <strong *ngIf="passwdreset.controls['new_password'].errors['pattern']">
+        كلمة المرور يجب ان تحتوى على حرف كابيتال على الاقل وحرف صغير
+      </strong>
+    </div>
+  </div>
+  <br />
+  <br />
+
+  <div class="form-label-group">
+    <input
+      type="password"
+      id="new_password_confirmation"
+      formControlName="new_password_confirmation"
+      class="form-control"
+      required
+      autofocus
+    />
+    <label for="inputnew_password_confirmation"> تأكيدكلمة المرور </label>
+    <div
+      class="alert alert-danger"
+      *ngIf="passwdreset.controls['new_password_confirmation'].errors && passwdreset.controls['new_password_confirmation'].touched"
+      role="alert"
+    >
+      <strong
+        *ngIf="form.controls['new_password_confirmation'].errors['required']"
+      >
+        كلمة المرور مطلوبة
+      </strong>
+      <strong
+        *ngIf="form.controls['new_password_confirmation'].errors['minlength']"
+      >
+        6 كلمة المرور يجب ان لا تقل عن
+      </strong>
+      <strong
+        *ngIf="form.controls['new_password_confirmation'].errors['maxlength']"
+      >
+        كلمة مرور يجب ان لا تزيد عن 20
+      </strong>
+      <strong
+        *ngIf="form.controls['new_password_confirmation'].errors['pattern']"
+      >
+        كلمة المرور يجب ان تحتوى على حرف كابيتال وحرف صغير
+      </strong>
+    </div>
+  </div>
+  <br />
+  <br />
+
+  <button type="submit" class="send form-control ">تأكيد</button>
+</form>
+</div>
+<!-- [disabled]="!form.valid -->
