--- a/src/app/shared/component/side-bar/side-bar.component.html
+++ b/src/app/shared/component/side-bar/side-bar.component.html
@@ -3,7 +3,7 @@
       <img
         class="avatar mat-elevation-z8"
        [src] ="image"/>
-       <mat-icon>camera_alt</mat-icon> 
+       <mat-icon>camera_alt</mat-icon>
       <h2 class="name">{{name}}</h2>
 
 
@@ -111,8 +111,8 @@
       </ul>
       <mat-divider *ngIf="isOwner"></mat-divider>
 
-      
-    
+
+
 
       <mat-divider></mat-divider>
       <ul class="nav flex-column">
@@ -129,8 +129,8 @@
           </button>
           <div class="collapse" id="dashboard-collapse">
             <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-              <li><a routerLink="" style="text-decoration: none;" class="link-dark rounded">تعديل البيانات</a></li>
-              <li><a routerLink="" style="text-decoration: none;" class="link-dark rounded">تعديل كلمة السر</a> </li>
+              <li><a routerLink="/editpersonaldata" style="text-decoration: none;" class="link-dark rounded">تعديل البيانات</a></li>
+              <li><a routerLink="/editpassword" style="text-decoration: none;" class="link-dark rounded">تعديل كلمة السر</a> </li>
 
             </ul>
           </div>
