--- a/src/app/admin/component/team-members/team-members.component.html
+++ b/src/app/admin/component/team-members/team-members.component.html
@@ -1,6 +1,9 @@
 
 
 <div class="container mt-3">
+  <button type="submit" class="send" style="width: 100%;height: 42px; padding: 0px;" (click)="add()">
+    اضافة عضو جديد للفريق</button>
+
     <table class="table table-striped">
       <thead>
         <tr>
